--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,11 +8,16 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/google/go-licenses/archive/{{ commit }}.tar.gz
-  sha256: e3db1d49696e0c77995c4561a1abedca7c50ebece3b4864aeed963657d12a961
-  patches:
-    - 0001-Add-path-to-license-archive-relative-to-executable.patch
-    - 0002-Recognize-more-license-file-name-patterns.patch
+  - url: https://github.com/google/go-licenses/archive/{{ commit }}.tar.gz
+    sha256: e3db1d49696e0c77995c4561a1abedca7c50ebece3b4864aeed963657d12a961
+    patches:
+      - 0001-Add-path-to-license-archive-relative-to-executable.patch
+      - 0002-Recognize-more-license-file-name-patterns.patch
+  - url: https://github.com/google/licenseclassifier/archive/{{ licenseclassifier_commit }}.tar.gz
+    sha256: 7fc0b149b44e263d8d58bfadee7c789b62b2c3f7ff7e51fd6e861a61e2143930
+    folder: licenseclassifier-{{ licenseclassifier_commit }}
+    patches:
+      - 0001-Use-filepath.IsAbs.patch
 
 build:
   number: 0
