--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,17 +1,12 @@
-# NOTE: The package version does not correspond to an upstream version but
-#       rather denotes the commit number. E.g., "0.0.35" is the 35th commit.
-{% set version = "0.0.44" %}
-{% set commit = "ceb292363ec84358c9a276ef23aa0de893e59b84" %}
+{% set version = "1.1.1" %}
 
 package:
   name: go-licenses
   version: {{ version }}
 
 source:
-  - url: https://github.com/google/go-licenses/archive/{{ commit }}.tar.gz
-    sha256: 12e90501e8fd009d60dbc1447330d14329d9cbbd71f24e0dcf4996a9d80b0c80
-    patches:
-      - 0001-Recognize-unlicense-file-name-patterns.patch
+  - url: https://github.com/google/go-licenses/archive/refs/tags/v{{ version }}.tar.gz
+    sha256: 1bae3aafe079704f366846adf086cd6592ba2a8e58377dd4b7b9236b209402bb
 
 build:
   number: 0
