--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   - url: https://github.com/google/go-licenses/archive/refs/tags/v{{ version }}.tar.gz
     sha256: 1bae3aafe079704f366846adf086cd6592ba2a8e58377dd4b7b9236b209402bb
+    patches:
+      - 0001-Recognize-unlicense-file-name-patterns.patch
 
 build:
   number: 0
